# Shlang-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  grammer.txt  test.shlang  var.shl  var.txt
examples/: calculator.shl  calculator.shlang  commands.shlang  fizzbuzz.shl  fizzbuzz.shlang  linkedlist.shl  linkedlist.shlang  sinewave.shl  sinewave.shlang
src/: AstNodes.rs  Defaults.rs  Interpreter.rs  Lexer.rs  Parser.rs  TokParser.rs  Token.rs  aexer.rs  ast_nodes.rs  charvec.rs  defaults.rs  interpreter.rs  lang_errors.rs  lib.rs  main.rs  runner.rs  spans.rs  token_lexer.rs  token_parser.rs  tokens.rs  utils.rs
src/backend/: defaults.rs  interpreter.rs  mod.rs  scope.rs  stackvm.rs  values.rs
src/backend/defaults/: closures.rs  func_methods.rs  functions.rs  global_methods.rs  lists.rs  mod.rs  native_objects.rs  numbers.rs  strings.rs
src/frontend/: codegen.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  parser_test.rs  stacknodes.rs  tokens.rs
src/frontend/ast/: error.rs  mod.rs  nodes.rs  parser.rs  parser_test.rs
src/frontend/ir/: codegen.rs  instructions.rs  mod.rs  tests.rs
src/frontend/lexemes/: lexer.rs  tokens.rs
src/frontend/nameres/: error.rs  mod.rs  resolver.rs  scope.rs  tests.rs
src/frontend/snapshots/: Shlang__frontend__parser_test__assignement.snap  Shlang__frontend__parser_test__call.snap  Shlang__frontend__parser_test__call_as_val.snap  Shlang__frontend__parser_test__call_with_paren.snap  Shlang__frontend__parser_test__chained_access.snap  Shlang__frontend__parser_test__do_block.snap  (+41 more)
src/tests/: ParserTest.rs  mod.rs  parser_test.rs
(+100 files in other folders)
