[package]
name = "shlang"
version = "2.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
insta = "1.30.0"
rand = "0.8.5"
rayon = "1.10.0"
slotmap = "1.0.7"
[dev-dependencies]
insta = { version = "1.30.0", features = ["yaml"] }
