[package]
name = "shlang"
version = "3.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }

colored = "2"
dyn-clone = "1.0.19"

rand = "0.8.5"
rayon = "1.10.0"


slotmap = "1.0.7"
[dev-dependencies]
insta = { version = "1.30.0", features = ["yaml"] }
